--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "no3rd-common",
-  "version": "1.0.6",
-  "description": "Business logic and utilities for use accross no3rd projects",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "no3rd-common",
+    "version": "1.0.8",
+    "description": "Business logic and utilities for use accross no3rd projects",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "prepare": "husky install",
+        "bump": "npm version patch --no-git-tag-version && git add package*.json && npm publish"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "husky": "^7.0.4"
+    }
 }
